--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .idea/
 __pycache__/
 venv/
+graph.txt
+.idea/workspace.xml
+*.pyc
+.idea/workspace.xml
+.idea/FYP.iml
+.idea/workspace.xml
+__pycache__/Interface.cpython-37.pyc
